[BE] reafctoring: 좌석 다중 선택